--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-full" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,8 +14,55 @@
     <link rel="stylesheet" href="./src/output.css">
     <title>Document</title>
 </head>
-<body>
 
+<body class="flex flex-col h-full">
+    <div class="header bg-base-300 mb-20">
+        <div class="navbar-start navbar max-w-6xl mx-auto display-flex justify-between mt-8 mb-8">
+            <img src="./assets/shared/desktop/logo.svg" alt="">
+            <ul class="links gap-12">
+                <li>
+                    <a href="">HOME</a>
+                </li>
+                <li>
+                    <a href="">HEADPHONES</a>
+                </li>
+                <li>
+                    <a href="">SPEAKERS</a>
+                </li>
+                <li>
+                    <a href="">EARPHONES</a>
+                </li>
+            </ul>
+            <img src="./assets/shared/desktop/icon-cart.svg" alt="">
+        </div>
+        <hr class="max-w-6xl mx-auto w-10/12 h-1">
+
+        <div class="container">
+            <div class="main-part max-w-6xl mx-auto
+            w-96;
+            h-96">
+                <h5 class="w-48 h-4 ">NEW PRODUCT</h5>
+                <h1 class="w-96 h-30">XX99 Mark II Headphones</h1>
+                <p class="w-96 h-20 from-zinc-50">Experience natural, lifelike audio and exceptional build quality made for the passionate music
+                    enthusiast.</p>
+                <button class="m-10">See Product</button>
+            </div>
+        </div>
+    </div>
+    <div class="main-speaker">
+        <img src="./assets/shared/desktop/image-category-thumbnail-headphones.png" alt="">
+        <h5>HEADPHONES</h5>
+        <img src="./assets/shared/desktop/image-zx9-speaker.jpg" alt="">
+        <h5>SPEAKERS</h5>
+        <img src="./assets/shared/desktop/image-xx99-mark-one-headphones.jpg" alt="">
+        <h5>EARPHONES</h5>
+    </div>
+    <div class="main-part bg-background: rgba(216, 125, 71)">
+        <img src="./assets/shared/desktop/image-category-thumbnail-speakers.png" alt="">
+        <h1>ZX9 SPEAKER</h1>
+        <p>Upgrade to premium speakers that are phenomenally built to deliver truly remarkable sound.</p>
+        <button>See Product</button>
+    </div>
     <script src="./js/index.js"></script>
 </body>
 
